Trying to fix the people app

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,18 @@
 body
-  padding: 50px
+  padding: 0px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+#outer_wrapper
+  width: 940px
+  margin: 0px auto
 a
   color: #00B7FF
+
+ul.nav
+  list-style: none
+  padding: 0px
+  margin: 0px
+ul.nav li
+  display:inline
+  margin-right: 10px
+ul.nav li a
+  text-decoration: none
