--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,15 @@
 doctype 5
 html
   head
-    title= title
+    title= newTitle
     link(rel='stylesheet', href='/stylesheets/style.css')
+    // [if lt IE 9]
+      script(src="//html5shim.googlecode.com/svn/trunk/html5.js")
   body
-    block content
+    #outer_wrapper
+      header
+        #top_area
+        nav#top_menu
+          include partials/_topmenu
+      #content
+        block content
