--- a/views/risk_management/index.jade
+++ b/views/risk_management/index.jade
@@ -15,6 +15,6 @@ block content
 block template-scripts
   script(type="text/template", id="category-template")
     div#category_single
-      span {{title}}
-      span {{description}}
+      span <%=title%>
+      span <%=description%>
   include _form
