--- a/views/risk_management/categories/index.jade
+++ b/views/risk_management/categories/index.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../../layout
 
 block scripts
   != js("jquery-1.8.0.min")
@@ -11,6 +11,8 @@ block content
   p Welcome to #{title}
   #container
     #category-form-container
+    h4 Categories
+    #category-container
 
 block template-scripts
   script(type="text/template", id="category-template")
