Revert "hmm… #broken"
This reverts commit a2a7753f86c7a2b75df9d7c676116430997325e5.

--- a/views/risk_management/categories/index.jade
+++ b/views/risk_management/categories/index.jade
@@ -16,7 +16,7 @@ block content
 
 block template-scripts
   script(type="text/template", id="category-template")
-    div#category-single
+    div#category_single
       span <%=title%>
       span <%=description%>
   include _form
