--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,14 @@ html
     block styles
     block scripts
   body
-    block content
-    
+    #outer-wrapper
+      nav
+        ul.navigation
+          li
+            a(href="#parents", id="parent-categories") Parent Categories
+          li
+            a(href="#children", id="categories") Categories
+      block content
+      
     block footer-scripts
     block template-scripts
