--- a/views/risk_management/categories/index.jade
+++ b/views/risk_management/categories/index.jade
@@ -1,47 +1,21 @@
 extends ../../layout
 
+block styles
+  != css("risk_management/risk_style")
+
 block scripts
-  != js("application")
+  != js("risk_management/application")
+
+block navigation
+  li
+    a(href="#parents", id="parent-categories") Meta Categories
+  li
+    a(href="#children", id="categories") Categories
 
 block content
   h1= title
-  p Welcome to #{title}
-  #container
-    
+  #main-container
+    #main-view
 
 block template-scripts
-  script(type="text/template" , id="categories-template")
-    #category-form-container
-    h4 Categories
-    #category-container
-  script(type="text/template", id="category-template")
-    table#categories
-      thead#category-header
-        tr
-          td Title
-          td Description
-          td Parent
-          td
-      tbody#category-content
-  script(type="text/template", id="parent-category-template")
-    table#categories
-      thead#category-header
-        tr
-          td Title
-          td Description
-          td
-          td
-      tbody#category-content
-  script(type="text/template", id="category-single-template")
-    tr
-      td <%=title%>
-      td <%=description%>
-      td <%=(parent)?parent:""%>
-      td
-  script(type="text/template", id="parent-category-single-template")
-    tr
-      td <%=title%>
-      td <%=description%>
-      td
-      td
-  include _form
+  include includes/templates
