--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -1,7 +1,8 @@
 body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
-  color: #00B7FF
+  color: #FFF
+  text-decoration none
 
 #outer-wrapper
   width 940px
@@ -10,10 +11,39 @@ a
 nav ul.navigation
   list-style none
   padding 0px
+  background-color #5C6165
 
 nav ul.navigation li
-  display inline
+  display inline-block
+  padding 0px
   margin-right 15px
+  background-color #5C6165
+  width 200px
+
+nav ul.navigation li a
+  padding 10px 5px
+  display block
+
+nav ul.navigation li:hover
+  background-color #BFD630
+
+nav ul.navigation > li:first-child
+  margin-left 15px
+
+nav ul.submenu
+  list-style none
+  padding 0px
+  margin 0px
+  display none
+
+nav ul.navigation li:hover > ul.submenu
+  display block
+  position absolute
+  padding-top 0px
+  margin-top -1px
+
+nav ul.navigation li:hover > ul.submenu li
+  border-top 1px solid #222
 
 table
   padding: 0px
@@ -24,3 +54,26 @@ table td
 table th
   padding 0px
   margin 0px
+
+#errorbox
+  width 940px
+  height 30px
+  overflow-x scroll
+
+#errorbox ul#errorlist
+  margin 0px
+  padding 0px
+
+#errorbox ul#errorlist li
+  display inline-block
+  padding 2px 5px
+  background-color #FEF8F6
+  border 1px solid #CD0A0A
+  border-radius 5px
+  margin-right 5px
+  margin-bottom 10px
+
+#errorbox ul#errorlist li a#error-item-close
+  color #aaa
+  cursor pointer
+  margin-left 5px
