Added Texts models+view (client/server)

--- a/assets/css/risk_management/risk_style.styl
+++ b/assets/css/risk_management/risk_style.styl
@@ -1,69 +1,59 @@
-table#risk_list
+table.item_list
   width 100%
 
-table#risk_list thead tr th
+table.item_list thead tr th
   border-bottom #333 2px solid
   text-align left
   padding 5px 0px
 
-table#risk_list tbody tr td
+table.item_list tbody tr td
   padding 5px 0px
   vertical-align top
   border-bottom 1px #666 solid
 
-table#risk_list tbody tr:last-child td
+table.item_list tbody tr:last-child td
   border none
 
-table#risk_list tbody tr td#risk_description
-table#risk_list thead tr th#risk_description
-  width 300px
-
-table#risk_list tbody tr td#risk_category
-table#risk_list thead tr th#risk_category
-  width 250px
-
-table#risk_list tbody tr td#actionButtons
-table#risk_list thead tr th#actionButtons
-  text-align right
+table.item_list tbody tr td#actionButtons
   width 200px
+  text-align right
 
-table#risk_list tbody tr td#actionButtons a
+table.item_list tbody tr td#actionButtons a
   color #00b7ff
   padding-left 10px
 
-table#risk_list tbody tr td#actionButtons a:hover
+table.item_list tbody tr td#actionButtons a:hover
   text-decoration underline
-
 //Form table
 
-table#risk_form tr th
-table#risk_form tr td
+table.item_form tr th
+table.item_form tr td
   border-top 1px solid #999
   padding 5px 0px
 
-table#risk_form tr td
+table.item_form tr td
   width 350px
 
-table#risk_form tr td input[type=text]
+table.item_form tr td input[type=text]
   width 302px
   line-height 18px
   padding 5px
   margin-left 5px
 
-table#risk_form tr td textarea
+table.item_form tr td textarea
   width 310px
   height 150px
   margin-left 5px
 
-table#risk_form tr th
+table.item_form tr th
   text-align left
   vertical-align top
 
-table#risk_form tr td button
+table.item_form tr td button
   width 317px
   height 28px
   font-size 15px
   margin-left 5px
 
-#parent-detail
+.item_detail
   font-style italic
