--- a/views/risk_management/categories/includes/templates.jade
+++ b/views/risk_management/categories/includes/templates.jade
@@ -6,29 +6,14 @@ script(type="text/template", id="risk-main-template")
   #form-container
   #table-container
 
-script(type="text/template", id="risk-meta-list-table-template")
-  table#risk_list
-    thead
-      tr
-        th#risk_title Category Title
-        th#actionButtons
-    tbody#risk_list_content
-
 script(type="text/template", id="risk-list-table-template")
-  table#risk_list
+  table.item_list#risk_list
     thead
       tr
         th#risk_title Category Title
         th#risk_category Belongs to
         th#actionButtons
     tbody#risk_list_content
-
-script(type="text/template", id="risk-meta-list-tablerow-template")
-  td#risk_title <%= model.get('title') %>
-  td#actionButtons
-    <a id="showMore" href="#/metacategories/<%= model.get('_id')%>"> Show more
-    <a id="edit" href="#/metacategories/edit/<%= model.get('_id')%>"> Edit
-    <a id="delete" href="#/metacategories/delete/<%= model.get('_id')%>"> Delete
 
 script(type="text/template", id="risk-list-tablerow-template")
   td#risk_title <%= model.get('title') %>
@@ -62,25 +47,7 @@ script(type="text/template", id="risk-form-template")
       th
       td#category_submit
         button#add_category Add new category
-script(type="text/template", id="risk-meta-edit-template")
-  h3 Edit the information for the current category
-  #errorbox
-    ul#errorlist
-  table#risk_form
-    tr
-      th 
-        label(for="category_name") Category Title
-      td#category_name
-        <input type="text" name="category_name" id="category_name" value="<%= model.get('title')%>">
-    tr
-      th 
-        label(for="category_description") Category Description
-      td#category_description
-        textarea(name="category_description", id="category_description") <%= model.get('description') %>
-    tr
-      th
-      td#category_submit
-        button#save_category Save category
+
 script(type="text/template", id="risk-edit-template")
   h3 Edit the information for the current category
   #errorbox
@@ -106,26 +73,7 @@ script(type="text/template", id="risk-edit-template")
       td#category_submit
         button#save_category Save category
 
-script(type="text/template", id="risk-meta-form-template")  
-  h3 Enter the information about the new category
-  #errorbox
-    ul#errorlist
-  table#risk_form
-    tr
-      th 
-        label(for="category_name") Category Title
-      td#category_name
-        input(type="text", name="category_name", id="category_name")
-    tr
-      th 
-        label(for="category_description") Category Description
-      td#category_description
-        textarea(name="category_description", id="category_description")
-    tr
-      th
-      td#category_submit
-        button#add_category Add new category
 script(type="text/template", id="category-detail-template")
   h3#category-title <%= model.get('title') %>
   p#category-description <%= model.get('description') %>
-  #parent-detail <%= model.get('parent').title %> <%= model.get('parent').description %>
+  .item_detail#parent-detail <%= model.get('parent').title %> <%= model.get('parent').description %>
