--- a/views/risk_management/categories/includes/templates.jade
+++ b/views/risk_management/categories/includes/templates.jade
@@ -27,7 +27,7 @@ script(type="text/template", id="risk-form-template")
   h3 Enter the information about the new category
   #errorbox
     ul#errorlist
-  table#risk_form
+  table.item_form#risk_form
     tr
       th 
         label(for="category_name") Category Title
@@ -52,7 +52,7 @@ script(type="text/template", id="risk-edit-template")
   h3 Edit the information for the current category
   #errorbox
     ul#errorlist
-  table#risk_form
+  table.item_form#risk_form
     tr
       th 
         label(for="category_name") Category Title
