--- a/views/risk_management/metacategories/includes/templates.jade
+++ b/views/risk_management/metacategories/includes/templates.jade
@@ -37,7 +37,7 @@ script(type="text/template", id="risk-meta-form-template")
   h3 Enter the information about the new category
   #errorbox
     ul#errorlist
-  table#risk_form
+  table.item_form#risk_form
     tr
       th 
         label(for="category_name") Category Title
