--- a/views/risk_management/index.jade
+++ b/views/risk_management/index.jade
@@ -22,6 +22,11 @@ block navigation
     ul.submenu
       li
         a(href="#/texts/new") New Text
+  li
+    a(href="#/probabilities") Probabilities
+    ul.submenu
+      li
+        a(href="#/probabilities/new") New Probability
 
 block content
   h1#page-title= title
@@ -32,3 +37,4 @@ block template-scripts
   include categories/includes/templates
   include metacategories/includes/templates
   include texts/includes/templates
+  include probabilities/includes/templates
