Test deployed on nodejitsu

--- a/assets/css/risk_management/risk_style.styl
+++ b/assets/css/risk_management/risk_style.styl
@@ -57,3 +57,35 @@ table.item_form tr td button
 
 .item_detail
   font-style italic
+
+div#risk-title
+  display inline-block
+  font-size 22px
+  padding 5px 5px
+  border-radius 5px
+
+.risk-detail-header
+  margin-bottom 0px
+
+p.risk-detail
+  margin-top 0px
+  border-top 1px solid #e3e3e3
+
+span.indicator_red
+span.indicator_yellow
+span.indicator_green
+  padding 2px
+  border-radius 5px
+  width 50px
+  margin 0px
+
+.indicator_red
+  background-color red
+  color white
+
+.indicator_yellow
+  background-color yellow
+
+.indicator_green
+  background-color green
+  color white
